@@ -1,5 +1,4 @@
 require 'data_mapper/associations/has_many_association'
-require 'data_mapper/associations/advanced_has_many_association'
 require 'data_mapper/associations/belongs_to_association'
 require 'data_mapper/associations/has_one_association'
 require 'data_mapper/associations/has_and_belongs_to_many_association'
@@ -13,8 +12,8 @@ module DataMapper
     
     module ClassMethods
       
-      def advanced_has_many(association_name, options = {})
-        database.schema[self].associations << AdvancedHasManyAssociation.new(self, association_name, options)
+      def has_many(association_name, options = {})
+        database.schema[self].associations << HasManyAssociation.new(self, association_name, options)
       end
       
       def belongs_to(association_name, options = {})
@@ -23,10 +22,6 @@ module DataMapper
       
       def has_and_belongs_to_many(association_name, options = {})
         HasAndBelongsToManyAssociation.setup(self, association_name, options)
-      end
-      
-      def has_many(association_name, options = {})
-        HasManyAssociation.setup(self, association_name, options)
       end
       
       def has_one(association_name, options = {})
