@@ -3,5 +3,4 @@ class Zoo < DataMapper::Base
   property :notes, :text
   
   has_many :exhibits
-  advanced_has_many :exhibits2, :class_name => 'Exhibit'
 end
